// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`run for all time w/o initial state 1`] = `
Object {
  "c": Object {
    "mike": 3,
  },
  "i": Object {
    "mike": Array [
      "Raises, as young",
      "Mike D",
      "fSEwJorvqOMK5UhNMHa4mu48izl1",
    ],
  },
  "n": 3,
  "u": Array [
    "anonymous-user-id",
    "blah",
    "other-user-id",
  ],
}
`;

exports[`run for all time w/o initial state 2`] = `
Object {
  "a": "fSEwJorvqOMK5UhNMHa4mu48izl1",
  "ct": Array [
    0.01,
    0.02,
    0.04,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
  ],
  "n": 3,
  "nt": 158,
  "s": 2,
  "st": 88,
  "uc": Array [
    1,
    0.4,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
  ],
}
`;

exports[`run for more recent w/o initial state 1`] = `
Object {
  "c": Object {
    "mike": 2,
  },
  "i": Object {
    "mike": Array [
      "Raises, as young",
      "Mike D",
      "fSEwJorvqOMK5UhNMHa4mu48izl1",
    ],
  },
  "n": 2,
  "u": Array [
    "blah",
    "other-user-id",
  ],
}
`;

exports[`run for more recent w/o initial state 2`] = `
Object {
  "a": "fSEwJorvqOMK5UhNMHa4mu48izl1",
  "ct": Array [
    0.01,
    0.02,
    0.04,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
    1,
  ],
  "n": 2,
  "nt": 114,
  "s": 1,
  "st": 44,
  "uc": Array [
    1,
    0.4,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
    0.2,
  ],
}
`;

exports[`run w/ initial state 1`] = `
Object {
  "c": Object {
    "mike": 6,
  },
  "i": Object {
    "mike": Array [
      "Raises, as young",
      "Mike D",
      "fSEwJorvqOMK5UhNMHa4mu48izl1",
    ],
  },
  "n": 6,
  "u": Array [
    "anonymous-user-id",
    "blah",
    "other-user-id",
  ],
}
`;

exports[`run w/ initial state 2`] = `
Object {
  "a": "fSEwJorvqOMK5UhNMHa4mu48izl1",
  "ct": Array [
    0.02,
    0.04,
    0.08,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
    2,
  ],
  "n": 6,
  "nt": 316,
  "s": 4,
  "st": 176,
  "uc": Array [
    2,
    0.8,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
    0.4,
  ],
}
`;
